--- a/index.html
+++ b/index.html
@@ -8,18 +8,11 @@
     <!-- <script src="./app.js"></script> -->
 </head>
 <body>
-    <!-- <form name="submit-to-google-sheet">
-        <input type="text" id="GoogleSheetCheekyLion" name="Cheeky Lion"  placeholder="Add Your Name" required>
-        <input type="number" id="GoogleSheetCheekyCougar" name="Cheeky Cougar"  placeholder="Add Your Phone Number" required>
-        <button onclick="addData()" class="btn btn-lg btn-bread" id="bread" type="submit">Add Data</button>
-      </form> -->
-
-    
       <form method="POST" action="https://script.google.com/macros/s/AKfycbxQzG7YtWb-Tg3bHfU9px7VZX0r4-6-MtCe-dyaagZMEu8fBvpIQiSwG66bzBFerCO6/exec">
-          <input name="Name" type="text" placeholder="Name" required>
-        <input name="Email" type="email" placeholder="Email" required>
+        <input name="Name"  type="text"   placeholder="Name"  required>
+        <input name="Email" type="email"  placeholder="Email" required>
         <input name="Phone" type="number" placeholder="Phone" required>
-        <button type="submit">Send</button>
+        <button type="submit">Send Data</button>
       </form>
       
 </body>
